# Voice-Agent

./: .env.example  .gitignore  README.md  SPL_IMPLEMENTATION_PLAN.md  VoiceAgent.postman_collection.json  VoiceAgent.postman_collection_e2e.json  add_phone_config.py  config.json  config_template.json  main.py  make_call.py  package.json  pyproject.toml  requirements.txt  server.py  start.py
app/: __init__.py  session_cache.py
app/core/: config.py  convex_client.py  exceptions.py  logging.py
app/domains/: __init__.py  registry.py
app/functions/: __init__.py  dynamic_functions.py
app/models/: session.py
app/repositories/: __init__.py  catalog_repository.py  convex_session_repository.py  menu_repository.py  session_repository.py
app/schemas/: __init__.py  call_schemas.py  config_schemas.py  phone_config_schemas.py  session_schemas.py
app/services/: __init__.py  chunking_service.py  clover.py  config_service.py  document_parser_service.py  function_generator_service.py  knowledge_base_service.py  session_service.py  (+4 more)
convex/: agents.ts  analytics.ts  callInteractions.ts  callMetrics.ts  callSessions.ts  convex.config.ts  documents.ts  functionSchemas.ts  organizations.ts  phoneConfigs.ts  rag.ts  schema.ts
scripts/: check_agent_config.py  check_sessions.py  create_tenant_simple.py  deploy_convex.py  ingest_file.py  provision_and_configure_env.py  setup_phone.py  show_convex_data.py  test_convex_mutations.py  test_dish_searches.py  test_search.py  verify_convex_data.py
tests/: test_tenants.py
websocket_server/: __init__.py  connection_manager.py  server.py
(+29 files in other folders)
