[project]
name = "voiceagents-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "llama-cloud-services>=0.6.88",
    "llama-parse>=0.6.88",
    "openai>=2.14.0",
]

[tool.setuptools.packages.find]
include = ["app*", "websocket_server*"]
